--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ python:
 before_install:
   - pip install --upgrade coveralls
   - pip install --upgrade coverage
+  - mkdir -p /usr/share/nagaram
+  - cp wordlists/* /usr/share/nagaram/
 
 script: "nosetests --with-coverage --cover-package=nagaram"
 
