--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 before_install:
   - pip install --upgrade coveralls
   - pip install --upgrade coverage
+  - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install --upgrade unittest2; fi
 
 script: "nosetests --with-coverage --cover-package=nagaram"
 
