--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ python:
   - '3.3'
   - '3.4'
 
+before_install:
+  - pip install --upgrade coveralls
+
 script: "python setup.py test"
 
 after_success:
